--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17
 VOLUME /tmp
 EXPOSE 8080
-ARG JAR_FILE=target/commerce-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE=commerce-0.0.1-SNAPSHOT.jar
 ADD ${JAR_FILE} commerce-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","/commerce-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","commerce-0.0.1-SNAPSHOT.jar"]
