--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
-ARG JAR_FILE=target/*.jar
+ARG JAR_FILE=target/commerce-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} commerce-0.0.1-SNAPSHOT.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/commerce-0.0.1-SNAPSHOT.jar"]
