--- a/frontend/atlcommerce/package.json
+++ b/frontend/atlcommerce/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
-    "bootstrap": "^5.3.2",
+    "@popperjs/core": "^2.11.8",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,8 +27,10 @@
     "@angular-devkit/build-angular": "~13.1.3",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/bootstrap": "^5.2.8",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "bootstrap": "^5.3.2",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
