--- a/frontend/atlcommerce/angular.json
+++ b/frontend/atlcommerce/angular.json
@@ -91,7 +91,8 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "./_redirects"
             ],
             "styles": [
               "src/styles.css"
