--- a/frontend/atlcommerce/angular.json
+++ b/frontend/atlcommerce/angular.json
@@ -92,7 +92,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "./_redirects"
+              "dist/atlcommerce/_redirects"
             ],
             "styles": [
               "src/styles.css"
